<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvTitleChangeSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:text="@string/delete_user"
        android:textSize="16sp"
        android:fontFamily="@font/boldinter"/>

    <Spinner
        android:id="@+id/spUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/spinner_teacher"
        android:paddingStart="38dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:layout_marginRight="16dp"
            android:text="@string/cancelCaps"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:fontFamily="@font/boldinter"
            android:background="@drawable/bg_corner_stroke"/>

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/boldinter"
            android:background="@drawable/bottom_bg_purple"/>

    </LinearLayout>

</LinearLayout>