<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.DetailMaterialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:tint="@color/purple"
                    android:src="@drawable/ic_back"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_corner_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMaterialName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_name"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/purple"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_tools"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:layout_marginTop="18dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list_new"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_goals"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:layout_marginTop="18dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGoals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list_new"/>

            <LinearLayout
                android:id="@+id/llGoToFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:background="@drawable/bg_corner_fill_8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/white"
                    android:src="@drawable/ic_link"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_link"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>